# skill-tree

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  go.mod  go.sum  install.sh  package.json  tsconfig.json
apps/api/: main.go
apps/cli/: README.md  main.go  package.json  tsconfig.json
apps/cli/src/: main.ts
apps/convex/: README.md  package.json  tsconfig.json
apps/convex/convex/: bootstrap.ts  context.ts  coverage.ts  decks.ts  model.ts  schema.ts  skills.ts
apps/convex/convex/_generated/: api.d.ts
apps/convex/scripts/: import-from-sqlite.ts  stats.ts
apps/web/: README.md  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/cards/[cardId]/cover/: route.ts
apps/web/src/app/api/cards/covered/: route.ts
apps/web/src/app/api/context/: route.ts
apps/web/src/app/api/decks/: route.ts
apps/web/src/app/api/decks/[deckId]/cards/: route.ts
apps/web/src/app/review/: page.tsx
apps/web/src/app/skills/[skillId]/: page.tsx
apps/web/src/components/review/: review-session.tsx
apps/web/src/components/skill-tree/: skill-tree-explorer.tsx
apps/web/src/lib/: skill-tree-api.ts  skill-tree-client.ts  skill-tree-types.ts
cmd/skill-builder/: main.go
cmd/skill-tree/: main.go
internal/httpapi/: handler.go
internal/store/: store.go  store_test.go
internal/tui/: markdown.go  review.go  tree.go
skills/skill-builder/: SKILL.md
skills/skill-tree/: SKILL.md
src/: cli.ts  index.ts  main.rs  store.rs  store.ts  tui-app.tsx  tui-helpers.ts  tui.rs  tui_helpers.rs
