[package]
name = "skill-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
cli-core = { path = "../packages/cli-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rand = "0.8"
